eks/kustomize/gateway/routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: shop-route
  namespace: thesis
spec:
  parentRefs:
    - name: ba-2026-gateway
      namespace: default
  rules:
    - matches:
        - path: { type: PathPrefix, value: /shop }

      backendRefs:
        - name: shop-service
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: transaction-route
  namespace: thesis
spec:
  parentRefs:
    - name: ba-2026-gateway
      namespace: default
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /pay
      backendRefs:
        - name: transaction-service
          port: 80
